<package>
  <name>wolf_rviz_plugin</name>
  <version>0.0.1</version>
  <description>
     WoLF plugins for RViz.
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
  <license>BSD</license>

  <author>Gennaro Raiola</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rt_gui</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
